# decentralization

./: .gitignore  CODEOWNERS  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml
data/: README.md  blacklist.yaml  current_nodes_20231207_152018.csv  current_nodes_20231218_143903.csv  current_nodes_20241112_112541.csv  node_pipeline.csv  sev_providers.csv  target_topology.csv
data/cluster_scenarios/: 99_prod.json
data/network_data/: current_nodes_20250819_110856.csv  current_nodes_20250919_004958.csv  current_nodes_20251029_125331.csv  current_nodes_20251031_113713.csv  current_nodes_20251109_203718.csv  only_gen2.csv
data/node_pipelines/: node_pipeline.csv  node_pipeline_CH.csv
data/topology/: current_topology_CH.csv  prod_topology.csv  target_topology.csv
examples/: README.md
examples/01-node-providers-evaluating-contribution/: README.md  config.json
examples/01-node-providers-evaluating-contribution/data/: sev_providers.csv
examples/02-proposal-verifiers-ensuring-authenticity/: README.md  config.json
examples/03-network-healers-submitting-proposals/: README.md  config.json
examples/04-de-clustering-the-network/: README.md  config.json
ic_topology/: main.py
tests/: api_bn.py  blacklisting.py  health.py  spare_capacity.py  special_limits.py  test_utils.py  topology_constraints.py
topology_optimizer/: config.json  config_CH.json  data_preparation.py  helper_functions.py  ic_topology_20230907.py  linear_solver.py  main.py  node_pipeline.csv  sev_providers.csv  testing.py  utils.py  visualization.py  what_if.py
(+16 files in other folders)
