[tool.poetry]
name = "ic-topology"
version = "0.1.0"
description = ""
authors = ["Saša Tomić <sasa.tomic@dfinity.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
