[tool.poetry]
name = "ic-topology"
version = "0.1.0"
description = "IC Mainnet decentralization"
authors = ["DRE team <dept-DRE@dfinity.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.32.4"
pandas = "1.5"
pulp = "^2.7.0"
matplotlib = "^3.8.0"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
