[tool.poetry]
name = "ic-topology"
version = "0.1.0"
description = "IC Mainnet decentralization"
authors = ["DRE team <dept-DRE@dfinity.org>", "Björn Assmann <bjoern.assmann@dfinity.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.32.0"
pandas = "1.5"
pulp = "^2.7.0"
matplotlib = "^3.8.0"
numpy = "^1.26.1"
click = "^8.2.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
